2008-08-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/privsep.c (privsep_server) :
	  Fix handling of read() return code as found by Coverity.

2008-06-13  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.h : 
	  Update to latest hostlist.h from LSD-Tools project.
	  This version includes unistd.h (patch by Ashley Pittman).
	  Issue was rediscovered Jeff Quaintance when I forgot to
	  include Ashley's patch in the last version of pdsh. D'oh!

2008-04-01  Mark Grondona <mgrondona@llnl.gov>

	* scripts/dshbak : Allow for ':' in pdsh output lines. 
	  Thanks to Ashley Pittman for the patch.

2008-03-19  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.16

	* scripts/dshbak : 
	  Do not include leading space in output lines (which is added
	  by pdsh) to data printed by dshbak. Thanks to Ashley Pittman
	  for the patch.

	* scripts/dshbak :
	  Remove -s (sort) option to dshbak. Always sort output instead.

2008-03-11  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/opt.c : 
	  When specifying rcmd_type via -w (i.e. [rcmd_type:][user@]host)
	  have rcmd_type apply across all hosts until the next rcmd
	  specification. That is ssh:host1,host2 now uses ssh for both
	  host1 and host2. Prior to this change, ssh would only be used
	  to contact host1. (Same change for user)

	* src/modules/genders.c :
	  Don't read genders file if no genders options were specified.

	* src/pdsh/opt.c : 
	  Check validity of user-supplied fanout.

	* src/pdsh/opt.c :
	  Avoid unecessary error message about missing WCOLL file by
	  only reading that file if no other node selection options
	  have been specified.

2008-01-29  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/mcmcd.c, src/modules/xrcmd.c, src/pdsh/dsh.c, 
	  src/pdsh/mod.c, src/pdsh/opt.c :
	  Fix minor defects as reported by Coverity.

	* src/common/hostlist.h, src/common/hostlist.c :
	  Update to the latest hostlist code from LSD-Tools.

2007-10-24  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.15
